--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="msg">Aproxima o telemóvel ao cartão para ver a imagem</div>
   <div class="wrap">
-    <img src="https://imgur.com/a/n7tSJhP" alt="Imagem do Cartão">
+    <img src="https://i.imgur.com/DsknLfy.jpeg" alt="Imagem do Cartão">
   </div>
 </body>
 </html>
