--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   </style>
 </head>
 <body>
-  <div class="msg">Aproxima o telemóvel ao cartão para ver a imagem</div>
   <div class="wrap">
-    <img src="https://i.imgur.com/DsknLfy.jpeg" alt="Imagem do Cartão">
+    <img src="https://i.imgur.com/5TbJoFX.jpeg" alt="Imagem do Cartão">
   </div>
 </body>
 </html>
